...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xHG-L9-5B1">
                                <rect key="frame" x="147.5" y="433" width="119" height="30"/>
                                <state key="normal" title="Find Repositories"/>
                                <connections>
                                    <action selector="check_nickname:" destination="BYZ-38-t0r" eventType="touchUpInside" id="enX-w8-Tbh"/>
                                </connections>
                            </button>
                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="sXY-MV-G7Y">
                                <rect key="frame" x="134" y="207" width="146" height="30"/>
...
                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                </tableViewCellContentView>
                            </tableViewCell>
                        </prototypes>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="MyTable"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
                            <outlet property="dataSource" destination="zgj-Nu-WnZ" id="ZP7-5a-LK2"/>
                            <outlet property="delegate" destination="zgj-Nu-WnZ" id="fsd-T6-71P"/>
                        </connections>
                    </tableView>
...
